# coding-agent-evals

./: .gitattributes  .gitignore  AGENTS.md  README.md  providers.example.toml  pyproject.toml
calibration/: README.md
docs/: design.md  framework-audit.md  proctor.md  results-site.md  verifier-audit-2026-07-21.md
experiments/: README.md  behavioral-corrected-20260721.toml  real-models-v1-behavioral-rerun-ce01.toml  real-models-v1-behavioral-rerun-ce06.toml  real-models-v1-behavioral-rerun-ce07.toml  real-models-v1-full-info-diagnostic.toml  real-models-v1-stage-a.toml  real-models-v1-stage-b-r2.toml  real-models-v1-stage-b-r3.toml  real-models-v1-stage-b-r4.toml  real-models-v1-stage-b-r5-selection.json  real-models-v1-stage-b-r5.toml  real-models-v1-stage-b-r6-selection.json  real-models-v1-stage-b-r6.toml  real-models-v1-stage-b-r7-selection.json  real-models-v1-stage-b-r7.toml  real-models-v1-stage-b-r8-selection.json  real-models-v1-stage-b-r8.toml  real-models-v1-stage-b.toml
reports/: README.md  candidate-environment-audit-2026-07-17.md
schemas/: proctor-review.schema.json
scripts/: bootstrap_tasks.py  calibrate.sh  summarize_calibration.py  test_isolation.sh  watch_proctor.py  write_provenance.py
sitegen/: __init__.py  __main__.py
tests/: test_agent.py  test_ce04_verifier.py  test_ce06_verifier.py  test_engine.py  test_evidence.py  test_experiment.py  test_matrix.py  test_proctor.py  test_proctor_mcp_integration.py  test_providers.py  test_report.py  test_review.py  test_review_packets.py  test_sitegen.py  test_task.py  test_watch_proctor.py
(+825 files in other folders)
